spotlessApply
Signed-off-by: Frank Lou <mloufra@amazon.com>